--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "framer-motion": "^12.8.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^15.3.4",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
